# Embedded-Test-Automation-Framework

./: .pre-commit-config.yaml  README.md  pyproject.toml
demo/: arduino_device_demo.ino  bluetooth_trinket.py  demo device model.yaml  test_demo.py  test_demo_DTAF.py
docs/source/: DTAF.config.rst  DTAF.devices.rst  DTAF.interfaces.base.rst  DTAF.interfaces.rst  DTAF.rst  DTAF.server.rst  conf.py  index.rst  modules.rst
docs/source/manuals/: contribuite.rst  index.rst  installation.rst
experimental/: README.md  memory_mng.py  test.py  test.yaml  test_socket.py  test_socket_client.py
src/DTAF/: .gitignore  __init__.py  factory.py  logger.py
src/DTAF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/DTAF/config/: __init__.py  logger_config.py  manager.py  parser.py  sockets_config.py
src/DTAF/devices/: device.py
src/DTAF/interfaces/: __init__.py  builder.py  gpio_pin.py  interfaces.py
src/DTAF/interfaces/base/: __init__.py  bluetooth_interface.py  can_interface.py  ethernet_interface.py  gpio_interface_raspy.py  gpio_interface_x64.py  i2c_interface.py  serial_interface.py  spi_interface.py  ssh_interface.py  telnet_interface.py
src/DTAF/server/: __init__.py  sockets.py
tests/coverage/: test_config.py  test_factory.py  test_logger.py
tests/coverage/devices/: test_device.py
tests/coverage/interfaces/: test_builder.py  test_serial_interface.py  test_telnet_interface.py
tests/coverage/server/: test_socket.py
